# metrolinkTimes

./: .env  .gitignore  .travis.yml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  setup.py
config/: metrolinkTimes.conf
docker/: Dockerfile  before_build.sh
lib/systemd/system/: metrolinkTimes.service
metrolinkTimes/: __main__.py  metrolinkTimes.py  tfgmMetrolinksAPI.py  tramGraph.py
metrolinkTimes/data/: stations.json
src/metrolinkTimes/: tfgmMetrolinksAPI.py  tramGraph.py
src/metrolinkTimes/data/: stations.json
test/: test_dummy.py
