[build-system]
requires = ["setuptools", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"# pyproject.toml

[project]
name = "metrolinkTimes"
description = "Track trams on the metrolink network & estimate their due times"
readme = "README.md"
authors = [
  {email = "metrolinktimes@j616s.co.uke"},
  {name = "James Sandford"}
]
requires-python = ">=3.7"
license = {file = "license"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
	"networkx~=2.6",
	"matplotlib~=3.5.2",
	"tornado~=6.1.0"
]
dynamic = ["version"]

[project.optional-dependencies]
test = [
 	"pytest-flake8~=1.0.4",
	"flake8~=3.7.9"
]

[project.scripts]
metrolinkTimes = "metrolinkTimes.__main__:main"

[project.urls]
homepage = "https://github.com/j616/metrolinkTimes"
repository = "https://github.com/j616/metrolinkTimes"

[tool.setuptools_scm]
write_to = "pkg/_version.py"

[tool.setuptools]
packages = ["metrolinkTimes"]

[tool.setuptools.package-data]
metrolinkTimes = ["data/stations.json"]
